# ttRoPE

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
dependencies/: CMakeLists.txt  fetch_cli11.cmake  msgpack.patch
ttrope/: main.cpp  pch.hpp
ttrope/kernels/: compute.cpp  reader.cpp  writer.cpp
ttropeop/: main.cpp  pch.hpp
